feat: adding utilities for cards local generation & testing (#34)
* feat: getuserdata private

* fix: fix incorrect import

* feat: refractor & add local scripts

* feat: add local dev generation script

* last touches

* refractor: suggestions

* docs: add documentation for local dev script

* refractor: change output folder

* update local dev user command name c5a5fecd3689b11fd3325c7f0fd3228bd368e0f5

--- a/coverage.html
+++ b/coverage.html
@@ -184,7 +184,7 @@
             <td>SocialCardService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/6)</span>
+                <span class="coverage-count">(0/7)</span>
             </td>
         </tr>
         <tr class="low">
@@ -197,6 +197,18 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/UserCardData.html">src/social-card/social-card.service.ts</a>
+            </td>
+            <td>interface</td>
+            <td>UserCardData</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/7)</span>
             </td>
         </tr>
         <tr class="low">
