--- a/injectables/SocialCardService.html
+++ b/injectables/SocialCardService.html
@@ -100,9 +100,14 @@
                             </li>
                             <li>
                                     <span class="modifier">Async</span>
+                                <a href="#generateCardBuffer" >generateCardBuffer</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Async</span>
                                 <a href="#getUserCard" >getUserCard</a>
                             </li>
                             <li>
+                                    <span class="modifier">Private</span>
                                     <span class="modifier">Async</span>
                                 <a href="#getUserData" >getUserData</a>
                             </li>
@@ -129,7 +134,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/social-card/social-card.service.ts:23</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/social-card/social-card.service.ts:36</a></div>
                             </td>
                         </tr>
 
@@ -218,8 +223,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="77"
-                            class="link-to-prism">src/social-card/social-card.service.ts:77</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="113"
+                            class="link-to-prism">src/social-card/social-card.service.ts:113</a></div>
                 </td>
             </tr>
 
@@ -271,6 +276,89 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
+                    <a name="generateCardBuffer"></a>
+                    <span class="name">
+                        <span class="modifier">Async</span>
+                        <span ><b>generateCardBuffer</b></span>
+                        <a href="#generateCardBuffer"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>generateCardBuffer(username: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, userData?: <a href="../interfaces/UserCardData.html" target="_self">UserCardData</a>)</code>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="82"
+                            class="link-to-prism">src/social-card/social-card.service.ts:82</a></div>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+
+                    <div class="io-description">
+                        <b>Parameters :</b>
+                        
+                        <table class="params">
+                            <thead>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>Type</td>
+                                    <td>Optional</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>username</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                                <tr>
+                                    <td>userData</td>
+                                    <td>
+                                                <code><a href="../interfaces/UserCardData.html" target="_self" >UserCardData</a></code>
+                                    </td>
+
+                                    <td>
+                                        Yes
+                                    </td>
+
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
+                    </div>
+                    <div class="io-description">
+                        <b>Returns : </b>    <code>unknown</code>
+
+                    </div>
+                    <div class="io-description">
+                        
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
                     <a name="getUserCard"></a>
                     <span class="name">
                         <span class="modifier">Async</span>
@@ -289,8 +377,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="103"
-                            class="link-to-prism">src/social-card/social-card.service.ts:103</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="139"
+                            class="link-to-prism">src/social-card/social-card.service.ts:139</a></div>
                 </td>
             </tr>
 
@@ -344,6 +432,7 @@
                 <td class="col-md-4">
                     <a name="getUserData"></a>
                     <span class="name">
+                        <span class="modifier">Private</span>
                         <span class="modifier">Async</span>
                         <span ><b>getUserData</b></span>
                         <a href="#getUserData"><span class="icon ion-ios-link"></span></a>
@@ -360,8 +449,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="31"
-                            class="link-to-prism">src/social-card/social-card.service.ts:31</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="44"
+                            class="link-to-prism">src/social-card/social-card.service.ts:44</a></div>
                 </td>
             </tr>
 
@@ -399,7 +488,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>    <code>Promise&lt;literal type&gt;</code>
+                        <b>Returns : </b>        <code><a href="../interfaces/UserCardData.html" target="_self" >Promise&lt;UserCardData&gt;</a></code>
 
                     </div>
                     <div class="io-description">
@@ -435,7 +524,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/social-card/social-card.service.ts:23</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/social-card/social-card.service.ts:36</a></div>
                         </td>
                     </tr>
 
@@ -452,7 +541,8 @@
 import { HttpService } from &quot;@nestjs/axios&quot;;
 import { Resvg } from &quot;@resvg/resvg-js&quot;;
 import { Repository, Language, User } from &quot;@octokit/graphql-schema&quot;;
-import { readFile } from &quot;node:fs/promises&quot;;
+import fs from &quot;node:fs/promises&quot;;
+
 
 import { GithubService } from &quot;../github/github.service&quot;;
 import { S3FileStorageService } from &quot;../s3-file-storage/s3-file-storage.service&quot;;
@@ -468,6 +558,18 @@ interface RequiresUpdateMeta {
   lastModified: Date | null,
 }
 
+interface UserCardData {
+  id: User[&quot;databaseId&quot;],
+  name: User[&quot;name&quot;],
+  langs: (Language &amp; {
+    size: number,
+  })[],
+  langTotal: number,
+  repos: Repository[],
+  avatarUrl: string,
+}
+
+
 @Injectable()
 export class SocialCardService {
   private readonly logger &#x3D; new Logger(this.constructor.name);
@@ -478,16 +580,7 @@ export class SocialCardService {
     private readonly s3FileStorageService: S3FileStorageService,
   ) {}
 
-  async getUserData (username: string): Promise&lt;{
-    id: User[&quot;databaseId&quot;],
-    name: User[&quot;name&quot;],
-    langs: (Language &amp; {
-      size: number,
-    })[],
-    langTotal: number,
-    repos: Repository[],
-    avatarUrl: string,
-  }&gt; {
+  private async getUserData (username: string): Promise&lt;UserCardData&gt; {
     const langs: Record&lt;string, Language &amp; {
       size: number,
     }&gt; &#x3D; {};
@@ -524,6 +617,38 @@ export class SocialCardService {
     };
   }
 
+  // public only to be used in local scripts. Not for controller direct use.
+  async generateCardBuffer (username: string, userData?: UserCardData) {
+    const { html } &#x3D; await import(&quot;satori-html&quot;);
+    const satori &#x3D; (await import(&quot;satori&quot;)).default;
+
+    const { avatarUrl, repos, langs, langTotal } &#x3D; userData ? userData : await this.getUserData(username);
+
+    const template &#x3D; html(userProfileCard(avatarUrl, username, userLangs(langs, langTotal), userProfileRepos(repos)));
+
+    const interArrayBuffer &#x3D; await fs.readFile(&quot;node_modules/@fontsource/inter/files/inter-all-400-normal.woff&quot;);
+
+    const svg &#x3D; await satori(template, {
+      width: 1200,
+      height: 627,
+      fonts: [
+        {
+          name: &quot;Inter&quot;,
+          data: interArrayBuffer,
+          weight: 400,
+          style: &quot;normal&quot;,
+        },
+      ],
+      tailwindConfig,
+    });
+
+    const resvg &#x3D; new Resvg(svg, { background: &quot;rgba(238, 235, 230, .9)&quot; });
+
+    const pngData &#x3D; resvg.render();
+
+    return { png: pngData.asPng(), svg };
+  }
+
   async checkRequiresUpdate (username: string): Promise&lt;RequiresUpdateMeta&gt; {
     const hash &#x3D; &#x60;users/${String(username)}.png&#x60;;
     const fileUrl &#x3D; &#x60;${this.s3FileStorageService.getCdnEndpoint()}${hash}&#x60;;
@@ -557,39 +682,15 @@ export class SocialCardService {
       throw new ForbiddenException(&quot;Rate limit exceeded&quot;);
     }
 
-    const { html } &#x3D; await import(&quot;satori-html&quot;);
-    const satori &#x3D; (await import(&quot;satori&quot;)).default;
+    const userData &#x3D; await this.getUserData(username);
 
     try {
-      const { id, avatarUrl, repos, langs, langTotal } &#x3D; await this.getUserData(username);
       const hash &#x3D; &#x60;users/${String(username)}.png&#x60;;
       const fileUrl &#x3D; &#x60;${this.s3FileStorageService.getCdnEndpoint()}${hash}&#x60;;
 
-      const template &#x3D; html(userProfileCard(avatarUrl, username, userLangs(langs, langTotal), userProfileRepos(repos)));
+      const { png } &#x3D; await this.generateCardBuffer(username, userData);
 
-      const interArrayBuffer &#x3D; await readFile(&quot;node_modules/@fontsource/inter/files/inter-all-400-normal.woff&quot;);
-
-      const svg &#x3D; await satori(template, {
-        width: 1200,
-        height: 627,
-        fonts: [
-          {
-            name: &quot;Inter&quot;,
-            data: interArrayBuffer,
-            weight: 400,
-            style: &quot;normal&quot;,
-          },
-        ],
-        tailwindConfig,
-      });
-
-      const resvg &#x3D; new Resvg(svg, { background: &quot;rgba(238, 235, 230, .9)&quot; });
-
-      const pngData &#x3D; resvg.render();
-
-      const pngBuffer &#x3D; pngData.asPng();
-
-      await this.s3FileStorageService.uploadFile(pngBuffer, hash, &quot;image/png&quot;, { &quot;x-amz-meta-user-id&quot;: String(id) });
+      await this.s3FileStorageService.uploadFile(png, hash, &quot;image/png&quot;, { &quot;x-amz-meta-user-id&quot;: String(userData.id) });
 
       this.logger.debug(&#x60;User ${username} did not exist in S3, generated image and uploaded to S3, redirecting&#x60;);
 
