--- a/interfaces/UserCardData.html
+++ b/interfaces/UserCardData.html
@@ -47,7 +47,7 @@
   <li>Interfaces</li>
   <li
   >
-  RequiresUpdateMeta</li>
+  UserCardData</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -84,27 +84,39 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
-                                        <a href="#fileUrl" 
+                                        <a href="#avatarUrl" 
 >
-                                            fileUrl
+                                            avatarUrl
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#hasFile" 
+                                        <a href="#id" 
 >
-                                            hasFile
+                                            id
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#lastModified" 
+                                        <a href="#langs" 
 >
-                                            lastModified
+                                            langs
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#needsUpdate" 
+                                        <a href="#langTotal" 
 >
-                                            needsUpdate
+                                            langTotal
+                                        </a>
+                                </li>
+                                <li>
+                                        <a href="#name" 
+>
+                                            name
+                                        </a>
+                                </li>
+                                <li>
+                                        <a href="#repos" 
+>
+                                            repos
                                         </a>
                                 </li>
                             </ul>
@@ -122,9 +134,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="fileUrl"></a>
-                                        <span class="name "><b>fileUrl</b>
-                                            <a href="#fileUrl">
+                                        <a name="avatarUrl"></a>
+                                        <span class="name "><b>avatarUrl</b>
+                                            <a href="#avatarUrl">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -132,7 +144,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>fileUrl:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                        <code>avatarUrl:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -155,9 +167,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="hasFile"></a>
-                                        <span class="name "><b>hasFile</b>
-                                            <a href="#hasFile">
+                                        <a name="id"></a>
+                                        <span class="name "><b>id</b>
+                                            <a href="#id">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -165,7 +177,34 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>hasFile:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+                                        <code>id:     <code></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="langs"></a>
+                                        <span class="name "><b>langs</b>
+                                            <a href="#langs">
+                                                <span class="icon ion-ios-link"></span>
+                                            </a>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>langs:     <code>()[]</code>
 </code>
                                     </td>
                                 </tr>
@@ -173,7 +212,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+                                            <i>Type : </i>    <code>()[]</code>
 
                                         </td>
                                     </tr>
@@ -188,9 +227,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="lastModified"></a>
-                                        <span class="name "><b>lastModified</b>
-                                            <a href="#lastModified">
+                                        <a name="langTotal"></a>
+                                        <span class="name "><b>langTotal</b>
+                                            <a href="#langTotal">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -198,7 +237,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>lastModified:     <code>Date | null</code>
+                                        <code>langTotal:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -206,7 +245,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>    <code>Date | null</code>
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
 
                                         </td>
                                     </tr>
@@ -221,9 +260,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="needsUpdate"></a>
-                                        <span class="name "><b>needsUpdate</b>
-                                            <a href="#needsUpdate">
+                                        <a name="name"></a>
+                                        <span class="name "><b>name</b>
+                                            <a href="#name">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -231,7 +270,34 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>needsUpdate:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+                                        <code>name:     <code></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="repos"></a>
+                                        <span class="name "><b>repos</b>
+                                            <a href="#repos">
+                                                <span class="icon ion-ios-link"></span>
+                                            </a>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>repos:     <code>Repository[]</code>
 </code>
                                     </td>
                                 </tr>
@@ -239,7 +305,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+                                            <i>Type : </i>    <code>Repository[]</code>
 
                                         </td>
                                     </tr>
@@ -457,7 +523,7 @@ export class SocialCardService {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interface';
-            var COMPODOC_CURRENT_PAGE_URL = 'RequiresUpdateMeta.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'UserCardData.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
