--- a/coverage.html
+++ b/coverage.html
@@ -166,34 +166,10 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./controllers/SocialCardController.html">src/social-card/social-card.controller.ts</a>
-            </td>
-            <td>controller</td>
-            <td>SocialCardController</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./injectables/SocialCardService.html">src/social-card/social-card.service.ts</a>
+                <a href="./injectables/HighlightCardService.html">src/social-card/highlight-card/highlight-card.service.ts</a>
             </td>
             <td>injectable</td>
-            <td>SocialCardService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/7)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./interfaces/RequiresUpdateMeta.html">src/social-card/social-card.service.ts</a>
-            </td>
-            <td>interface</td>
-            <td>RequiresUpdateMeta</td>
+            <td>HighlightCardService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/5)</span>
@@ -202,22 +178,94 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./interfaces/UserCardData.html">src/social-card/social-card.service.ts</a>
+                <a href="./interfaces/HighlightCardData.html">src/social-card/highlight-card/highlight-card.service.ts</a>
             </td>
             <td>interface</td>
-            <td>UserCardData</td>
+            <td>HighlightCardData</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/7)</span>
+                <span class="coverage-count">(0/8)</span>
             </td>
         </tr>
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#repoIconWithName">src/social-card/templates/repo-icon-with-name.ts</a>
+                <a href="./miscellaneous/variables.html#highlightCardTemplate">src/social-card/templates/highlight-card.template.ts</a>
+            </td>
+            <td>variable</td>
+            <td>highlightCardTemplate</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#cardFooter">src/social-card/templates/shared/card-footer.ts</a>
+            </td>
+            <td>variable</td>
+            <td>cardFooter</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#heartIconData">src/social-card/templates/shared/card-footer.ts</a>
+            </td>
+            <td>variable</td>
+            <td>heartIconData</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#cardStyleSetup">src/social-card/templates/shared/card-style-setup.ts</a>
+            </td>
+            <td>variable</td>
+            <td>cardStyleSetup</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#repoIconWithName">src/social-card/templates/shared/repo-icon-with-name.ts</a>
             </td>
             <td>variable</td>
             <td>repoIconWithName</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#userLangs">src/social-card/templates/shared/user-langs.ts</a>
+            </td>
+            <td>variable</td>
+            <td>userLangs</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#userProfileRepos">src/social-card/templates/shared/user-repos.ts</a>
+            </td>
+            <td>variable</td>
+            <td>userProfileRepos</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/1)</span>
@@ -238,10 +286,10 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#userLangs">src/social-card/templates/user-langs.ts</a>
+                <a href="./miscellaneous/variables.html#userProfileCardTemplate">src/social-card/templates/user-profile-card.template.ts</a>
             </td>
             <td>variable</td>
-            <td>userLangs</td>
+            <td>userProfileCardTemplate</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/1)</span>
@@ -250,25 +298,49 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#userProfileCard">src/social-card/templates/user-profile-card.ts</a>
+                <a href="./controllers/UserCardController.html">src/social-card/user-card/user-card.controller.ts</a>
             </td>
-            <td>variable</td>
-            <td>userProfileCard</td>
+            <td>controller</td>
+            <td>UserCardController</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+                <span class="coverage-count">(0/3)</span>
             </td>
         </tr>
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#userProfileRepos">src/social-card/templates/user-profile-repos.ts</a>
+                <a href="./injectables/UserCardService.html">src/social-card/user-card/user-card.service.ts</a>
             </td>
-            <td>variable</td>
-            <td>userProfileRepos</td>
+            <td>injectable</td>
+            <td>UserCardService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+                <span class="coverage-count">(0/7)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/RequiresUpdateMeta.html">src/social-card/user-card/user-card.service.ts</a>
+            </td>
+            <td>interface</td>
+            <td>RequiresUpdateMeta</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/UserCardData.html">src/social-card/user-card/user-card.service.ts</a>
+            </td>
+            <td>interface</td>
+            <td>UserCardData</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/7)</span>
             </td>
         </tr>
     </tbody>
