--- a/modules.html
+++ b/modules.html
@@ -90,6 +90,23 @@
             <div class="col-md-6 col-lg-4">
                 <div class="card card-module">
                     <div class="card-header">
+                        <h4 class="card-title">HighlightCardModule</h4>
+                    </div>
+                    <div class="card-block">
+                                <p>
+                                    <object id="demo-svg" type="image/svg+xml" lazy="./modules/HighlightCardModule/dependencies.svg" style="width: 100%; height: 175px;">
+                                        Your browser does not support SVG
+                                    </object>
+                                </p>
+                        <footer class="text-center">
+                            <a href="./modules/HighlightCardModule.html" class="btn btn-default">Browse</a>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="card card-module">
+                    <div class="card-header">
                         <h4 class="card-title">S3FileStorageModule</h4>
                     </div>
                     <div class="card-block">
@@ -107,16 +124,16 @@
             <div class="col-md-6 col-lg-4">
                 <div class="card card-module">
                     <div class="card-header">
-                        <h4 class="card-title">SocialCardModule</h4>
+                        <h4 class="card-title">UserCardModule</h4>
                     </div>
                     <div class="card-block">
                                 <p>
-                                    <object id="demo-svg" type="image/svg+xml" lazy="./modules/SocialCardModule/dependencies.svg" style="width: 100%; height: 175px;">
+                                    <object id="demo-svg" type="image/svg+xml" lazy="./modules/UserCardModule/dependencies.svg" style="width: 100%; height: 175px;">
                                         Your browser does not support SVG
                                     </object>
                                 </p>
                         <footer class="text-center">
-                            <a href="./modules/SocialCardModule.html" class="btn btn-default">Browse</a>
+                            <a href="./modules/UserCardModule.html" class="btn btn-default">Browse</a>
                         </footer>
                     </div>
                 </div>
