--- a/miscellaneous/variables.html
+++ b/miscellaneous/variables.html
@@ -64,6 +64,12 @@
                             <a href="#ApiConfig" title="src/config/api.config.ts" ><b>ApiConfig</b>&nbsp;&nbsp;&nbsp;(src/.../api.config.ts)</a>
                         </li>
                         <li>
+                            <a href="#cardFooter" title="src/social-card/templates/shared/card-footer.ts" ><b>cardFooter</b>&nbsp;&nbsp;&nbsp;(src/.../card-footer.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#cardStyleSetup" title="src/social-card/templates/shared/card-style-setup.ts" ><b>cardStyleSetup</b>&nbsp;&nbsp;&nbsp;(src/.../card-style-setup.ts)</a>
+                        </li>
+                        <li>
                             <a href="#DigitalOceanConfig" title="src/config/digital-ocean.config.ts" ><b>DigitalOceanConfig</b>&nbsp;&nbsp;&nbsp;(src/.../digital-ocean.config.ts)</a>
                         </li>
                         <li>
@@ -73,19 +79,25 @@
                             <a href="#GitHubConfig" title="src/config/github.config.ts" ><b>GitHubConfig</b>&nbsp;&nbsp;&nbsp;(src/.../github.config.ts)</a>
                         </li>
                         <li>
-                            <a href="#repoIconWithName" title="src/social-card/templates/repo-icon-with-name.ts" ><b>repoIconWithName</b>&nbsp;&nbsp;&nbsp;(src/.../repo-icon-with-name.ts)</a>
+                            <a href="#heartIconData" title="src/social-card/templates/shared/card-footer.ts" ><b>heartIconData</b>&nbsp;&nbsp;&nbsp;(src/.../card-footer.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#highlightCardTemplate" title="src/social-card/templates/highlight-card.template.ts" ><b>highlightCardTemplate</b>&nbsp;&nbsp;&nbsp;(src/.../highlight-card.template.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#repoIconWithName" title="src/social-card/templates/shared/repo-icon-with-name.ts" ><b>repoIconWithName</b>&nbsp;&nbsp;&nbsp;(src/.../repo-icon-with-name.ts)</a>
                         </li>
                         <li>
                             <a href="#tailwindConfig" title="src/social-card/templates/tailwind.config.ts" ><b>tailwindConfig</b>&nbsp;&nbsp;&nbsp;(src/.../tailwind.config.ts)</a>
                         </li>
                         <li>
-                            <a href="#userLangs" title="src/social-card/templates/user-langs.ts" ><b>userLangs</b>&nbsp;&nbsp;&nbsp;(src/.../user-langs.ts)</a>
+                            <a href="#userLangs" title="src/social-card/templates/shared/user-langs.ts" ><b>userLangs</b>&nbsp;&nbsp;&nbsp;(src/.../user-langs.ts)</a>
                         </li>
                         <li>
-                            <a href="#userProfileCard" title="src/social-card/templates/user-profile-card.ts" ><b>userProfileCard</b>&nbsp;&nbsp;&nbsp;(src/.../user-profile-card.ts)</a>
+                            <a href="#userProfileCardTemplate" title="src/social-card/templates/user-profile-card.template.ts" ><b>userProfileCardTemplate</b>&nbsp;&nbsp;&nbsp;(src/.../user-profile-card.template.ts)</a>
                         </li>
                         <li>
-                            <a href="#userProfileRepos" title="src/social-card/templates/user-profile-repos.ts" ><b>userProfileRepos</b>&nbsp;&nbsp;&nbsp;(src/.../user-profile-repos.ts)</a>
+                            <a href="#userProfileRepos" title="src/social-card/templates/shared/user-repos.ts" ><b>userProfileRepos</b>&nbsp;&nbsp;&nbsp;(src/.../user-repos.ts)</a>
                         </li>
                     </ul>
                 </td>
@@ -121,6 +133,103 @@
   disk_percentage: Number(parseFloat(process.env.DISK_PERCENGATE ?? &quot;0.7&quot;)),
   disk_size: Number(parseInt(process.env.DISK_SIZE ?? &quot;100&quot;, 10) * 1024 * 1024 * 1024),
 }))</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+</section>
+    <h3>src/social-card/templates/shared/card-footer.ts</h3>
+    <section>
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="cardFooter"></a>
+                    <span class="name">
+                        <span ><b>cardFooter</b></span>
+                        <a href="#cardFooter"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>(langs: string, repos: string, reactions?: number) &#x3D;&gt; &#x60;
+    &lt;div tw&#x3D;&quot;flex-col&quot; style&#x3D;&quot;gap: 8px;&quot;&gt;
+      &lt;div tw&#x3D;&quot;h-48px ${!reactions ? &quot;items-center&quot; : &quot;justify-between&quot;}&quot; style&#x3D;&quot;gap: 8px;&quot;&gt;
+        &lt;div tw&#x3D;&quot;h-48px items-center&quot; style&#x3D;&quot;gap: 8px;&quot;&gt;
+          ${repos}
+        &lt;/div&gt;
+
+        ${reactions
+    ? &#x60;
+          &lt;div tw&#x3D;&quot;h-48px items-center&quot; style&#x3D;&quot;gap: 12px;&quot;&gt;
+            &lt;img tw&#x3D;&quot;w-32px h-32px&quot; width&#x3D;&quot;1&quot; height&#x3D;&quot;1&quot; src&#x3D;&quot;${heartIconData}&quot;/&gt;
+            &lt;span tw&#x3D;&quot;font-medium text-32px text-black&quot;&gt;
+              ${reactions} Reactions
+            &lt;/span&gt;
+          &lt;/div&gt;
+        &#x60;
+    : &quot;&quot;}
+      &lt;/div&gt;
+
+      &lt;div tw&#x3D;&quot;flex-col h-18px justify-center overflow-hidden&quot;&gt;
+        &lt;div tw&#x3D;&quot;h-12px&quot; style&#x3D;&quot;gap: 4px;&quot;&gt;
+          ${langs}
+        &lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &#x60;</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="heartIconData"></a>
+                    <span class="name">
+                        <span ><b>heartIconData</b></span>
+                        <a href="#heartIconData"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>&#x60;data:image/svg+xml,%3csvg width&#x3D;&#x27;24&#x27; height&#x3D;&#x27;24&#x27; viewBox&#x3D;&#x27;0 0 24 24&#x27; fill&#x3D;&#x27;none&#x27; xmlns&#x3D;&#x27;http://www.w3.org/2000/svg&#x27;%3e%3cpath fill-rule&#x3D;&#x27;evenodd&#x27; clip-rule&#x3D;&#x27;evenodd&#x27; d&#x3D;&#x27;M6.73649 2.5C3.82903 2.5 1 5.052 1 8.51351C1 12.3318 3.80141 15.5735 6.38882 17.7763C7.70549 18.8973 9.01844 19.7929 10.0004 20.4077C10.4922 20.7157 10.9029 20.9544 11.1922 21.1169C11.4093 21.2388 11.5582 21.318 11.6223 21.3516C11.7407 21.4132 11.8652 21.4527 12 21.4527C12.1193 21.4527 12.2378 21.4238 12.3438 21.3693C12.5003 21.2886 12.6543 21.2031 12.8078 21.1169C13.0971 20.9544 13.5078 20.7157 13.9996 20.4077C14.9816 19.7929 16.2945 18.8973 17.6112 17.7763C20.1986 15.5735 23 12.3318 23 8.51351C23 5.052 20.171 2.5 17.2635 2.5C14.9702 2.5 13.1192 3.72621 12 5.60482C10.8808 3.72621 9.02981 2.5 6.73649 2.5ZM6.73649 4C4.65746 4 2.5 5.88043 2.5 8.51351C2.5 11.6209 4.8236 14.4738 7.36118 16.6342C8.60701 17.6948 9.85656 18.5479 10.7965 19.1364C11.2656 19.4301 11.6557 19.6567 11.9269 19.8091L12 19.85L12.0731 19.8091C12.3443 19.6567 12.7344 19.4301 13.2035 19.1364C14.1434 18.5479 15.393 17.6948 16.6388 16.6342C19.1764 14.4738 21.5 11.6209 21.5 8.51351C21.5 5.88043 19.3425 4 17.2635 4C15.1581 4 13.4627 5.38899 12.7115 7.64258C12.6094 7.94883 12.3228 8.15541 12 8.15541C11.6772 8.15541 11.3906 7.94883 11.2885 7.64258C10.5373 5.38899 8.84185 4 6.73649 4Z&#x27; fill&#x3D;&#x27;%2324292F&#x27;/%3e%3c/svg%3e&#x60;</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+</section>
+    <h3>src/social-card/templates/shared/card-style-setup.ts</h3>
+    <section>
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="cardStyleSetup"></a>
+                    <span class="name">
+                        <span ><b>cardStyleSetup</b></span>
+                        <a href="#cardStyleSetup"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>&#x60;
+  &lt;style&gt;
+    div {
+      display: flex;
+    }
+  &lt;/style&gt;
+&#x60;</code>
                     </td>
                 </tr>
 
@@ -323,7 +432,54 @@ query ($username: String!, $dateSince: DateTime) {
         </tbody>
     </table>
 </section>
-    <h3>src/social-card/templates/repo-icon-with-name.ts</h3>
+    <h3>src/social-card/templates/highlight-card.template.ts</h3>
+    <section>
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="highlightCardTemplate"></a>
+                    <span class="name">
+                        <span ><b>highlightCardTemplate</b></span>
+                        <a href="#highlightCardTemplate"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>(avatarUrl: string, title: string, body: string, langs: string, repos: string, reactions: number): string &#x3D;&gt; &#x60;
+  ${cardStyleSetup}
+
+  &lt;div tw&#x3D;&quot;flex-col justify-between w-1200px h-627px bg-white rounded-2xl p-32px pt-48px&quot;&gt;
+    &lt;div style&#x3D;&quot;gap: 16px;&quot;&gt;
+      &lt;div tw&#x3D;&quot;p-2.5 pt-5&quot; style&#x3D;&quot;gap: 10px;&quot;&gt;
+        &lt;img tw&#x3D;&quot;w-132px h-132px border border-sauced-orange rounded-full&quot; src&#x3D;&quot;${avatarUrl}&quot;/&gt;
+      &lt;/div&gt;
+
+      &lt;div tw&#x3D;&quot;w-906px flex-col flex-nowrap&quot; style&#x3D;&quot;gap: -10px;&quot;&gt;
+        &lt;h1 tw&#x3D;&quot;font-medium text-72px leading-72px text-zinc-900 tracking-tight&quot; style&#x3D;&quot;width: 926px;&quot;&gt;
+          ${title}
+        &lt;/h1&gt;
+        &lt;p tw&#x3D;&quot;font-normal text-48px text-light-slate-11 tracking-tight&quot;&gt;
+          ${body.length &gt; 108 ? &#x60;${body.slice(0, 108)}...&#x60; : body}
+        &lt;/p&gt;
+      &lt;/div&gt;
+
+      &lt;div&gt;
+        &lt;img tw&#x3D;&quot;w-46px h-46px border border-white rounded&quot; src&#x3D;&quot;https://raw.githubusercontent.com/open-sauced/assets/d9a0d5a317036084aa3f5f4e20cdfbe58dc37377/svgs/slice-Orange-Gradient.svg&quot;/&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+
+    ${cardFooter(langs, repos, reactions)}
+  &lt;/div&gt;&#x60;</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+</section>
+    <h3>src/social-card/templates/shared/repo-icon-with-name.ts</h3>
     <section>
     <h3></h3>    <table class="table table-sm table-bordered">
         <tbody>
@@ -601,7 +757,7 @@ query ($username: String!, $dateSince: DateTime) {
         </tbody>
     </table>
 </section>
-    <h3>src/social-card/templates/user-langs.ts</h3>
+    <h3>src/social-card/templates/shared/user-langs.ts</h3>
     <section>
     <h3></h3>    <table class="table table-sm table-bordered">
         <tbody>
@@ -635,27 +791,23 @@ query ($username: String!, $dateSince: DateTime) {
         </tbody>
     </table>
 </section>
-    <h3>src/social-card/templates/user-profile-card.ts</h3>
+    <h3>src/social-card/templates/user-profile-card.template.ts</h3>
     <section>
     <h3></h3>    <table class="table table-sm table-bordered">
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="userProfileCard"></a>
+                    <a name="userProfileCardTemplate"></a>
                     <span class="name">
-                        <span ><b>userProfileCard</b></span>
-                        <a href="#userProfileCard"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>userProfileCardTemplate</b></span>
+                        <a href="#userProfileCardTemplate"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
                 <tr>
                     <td class="col-md-4">
                         <i>Default value : </i><code>(avatarUrl: string, name: string, langs: string, repos: string): string &#x3D;&gt; &#x60;
-  &lt;style&gt;
-    div {
-      display: flex;
-    }
-  &lt;/style&gt;
+  ${cardStyleSetup}
 
   &lt;div tw&#x3D;&quot;flex-col justify-between w-1200px h-627px bg-white rounded-2xl p-32px pt-48px&quot;&gt;
     &lt;div style&#x3D;&quot;gap: 16px;&quot;&gt;
@@ -668,17 +820,7 @@ query ($username: String!, $dateSince: DateTime) {
       &lt;img tw&#x3D;&quot;w-48px h-48px border border-white rounded&quot; src&#x3D;&quot;https://raw.githubusercontent.com/open-sauced/assets/d9a0d5a317036084aa3f5f4e20cdfbe58dc37377/svgs/slice-Orange-Gradient.svg&quot;/&gt;
     &lt;/div&gt;
 
-    &lt;div tw&#x3D;&quot;flex-col&quot; style&#x3D;&quot;gap: 8px;&quot;&gt;
-      &lt;div tw&#x3D;&quot;h-48px items-center&quot; style&#x3D;&quot;gap: 8px;&quot;&gt;
-        ${repos}
-      &lt;/div&gt;
-
-      &lt;div tw&#x3D;&quot;flex-col h-18px justify-center overflow-hidden&quot;&gt;
-        &lt;div tw&#x3D;&quot;h-12px&quot; style&#x3D;&quot;gap: 4px;&quot;&gt;
-          ${langs}
-        &lt;/div&gt;
-      &lt;/div&gt;
-    &lt;/div&gt;
+    ${cardFooter(langs, repos)}
   &lt;/div&gt;&#x60;</code>
                     </td>
                 </tr>
@@ -687,7 +829,7 @@ query ($username: String!, $dateSince: DateTime) {
         </tbody>
     </table>
 </section>
-    <h3>src/social-card/templates/user-profile-repos.ts</h3>
+    <h3>src/social-card/templates/shared/user-repos.ts</h3>
     <section>
     <h3></h3>    <table class="table table-sm table-bordered">
         <tbody>
@@ -702,12 +844,12 @@ query ($username: String!, $dateSince: DateTime) {
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>(repos: Repository[]): string &#x3D;&gt; {
+                        <i>Default value : </i><code>(repos: Repository[], limit: number): string &#x3D;&gt; {
   const repoList &#x3D; repos.map(({ name, owner: { avatarUrl } }) &#x3D;&gt;
     repoIconWithName(&#x60;${name.substring(0, 15).replace(/\.+$/, &quot;&quot;)}${name.length &gt; 15 ? &quot;...&quot; : &quot;&quot;}&#x60;, &#x60;${String(avatarUrl)}&amp;size&#x3D;40&#x60;));
 
-  return &#x60;${repoList.slice(0, 4).join(&quot;&quot;)}${repoList.length &gt; 4
-    ? &#x60;&lt;h2 tw&#x3D;&quot;m-0 font-medium text-32px leading-32px text-zinc-900&quot;&gt;+${repoList.length - 2}&lt;/h2&gt;&#x60;
+  return &#x60;${repoList.slice(0, limit).join(&quot;&quot;)}${repoList.length &gt; limit
+    ? &#x60;&lt;h2 tw&#x3D;&quot;m-0 font-medium text-32px leading-32px text-zinc-900&quot;&gt;+${repoList.length - limit}&lt;/h2&gt;&#x60;
     : &#x60;&#x60;}&#x60;;
 }</code>
                     </td>
